(chores) camel-console: use unmodifiable list when possible